--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,6 @@
   },
   "scripts": {
     "start:db": "json-server -w db.json",
-    "start:parcel": "parcel index.js"
+    "start:parcel": "parcel index.hmtl"
   }
 }
